--- a/main/main/main.vcxproj.filters
+++ b/main/main/main.vcxproj.filters
@@ -3,4 +3,7 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="lib1.h" />
+  </ItemGroup>
 </Project>
